# rust-img-uploader

./: .env  .gitignore  Cargo.toml  docker-compose.yaml
src/: main.rs
