[package]
name = "rust-img-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = { version = "1.52.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
tokio = { version = "1.40.0", features = ["full"] }
aws-smithy-runtime = { version = "1.7.1" }
aws-smithy-runtime-api = { version = "1.7.2" }
aws-smithy-types = { version = "1.2.7" }
dotenv = "0.15"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
